--- a/jenkinsfile-examples/nodejs-build-test-deploy-docker-notify/Jenkinsfile
+++ b/jenkinsfile-examples/nodejs-build-test-deploy-docker-notify/Jenkinsfile
@@ -15,7 +15,7 @@ furnished to do so, subject to the following conditions:
 The above copyright notice and this permission notice shall be included in
 all copies or substantial portions of the Software.
 
-        THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+      THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
@@ -25,72 +25,74 @@ THE SOFTWARE.
 */
 
 node('node') {
+  docker {
+    image 'node:7-alpine'
+  }
 
+  currentBuild.result = "SUCCESS"
 
-    currentBuild.result = "SUCCESS"
+  try {
 
-    try {
+    stage('Checkout'){
 
-       stage('Checkout'){
+        checkout scm
+    }
 
-          checkout scm
-       }
+    stage('Test'){
 
-       stage('Test'){
+      env.NODE_ENV = "test"
 
-         env.NODE_ENV = "test"
+      print "Environment will be : ${env.NODE_ENV}"
 
-         print "Environment will be : ${env.NODE_ENV}"
-
-         sh 'node -v'
-         sh 'npm prune'
-         sh 'npm install'
-         sh 'npm test'
-
-       }
-
-       stage('Build Docker'){
-
-            sh './dockerBuild.sh'
-       }
-
-       stage('Deploy'){
-
-         echo 'Push to Repo'
-         sh './dockerPushToRepo.sh'
-
-         echo 'ssh to web server and tell it to pull new image'
-         sh 'ssh deploy@xxxxx.xxxxx.com running/xxxxxxx/dockerRun.sh'
-
-       }
-
-       stage('Cleanup'){
-
-         echo 'prune and cleanup'
-         sh 'npm prune'
-         sh 'rm node_modules -rf'
-
-         mail body: 'project build successful',
-                     from: 'xxxx@yyyyy.com',
-                     replyTo: 'xxxx@yyyy.com',
-                     subject: 'project build successful',
-                     to: 'yyyyy@yyyy.com'
-       }
-
-
+      sh 'node -v'
+      sh 'npm prune'
+      sh 'npm install'
+      sh 'npm test'
 
     }
-    catch (err) {
 
-        currentBuild.result = "FAILURE"
+    stage('Build Docker'){
 
-            mail body: "project build error is here: ${env.BUILD_URL}" ,
-            from: 'xxxx@yyyy.com',
-            replyTo: 'yyyy@yyyy.com',
-            subject: 'project build failed',
-            to: 'zzzz@yyyyy.com'
-
-        throw err
+          sh './dockerBuild.sh'
     }
+
+    stage('Deploy'){
+
+      echo 'Push to Repo'
+      sh './dockerPushToRepo.sh'
+
+      echo 'ssh to web server and tell it to pull new image'
+      sh 'ssh deploy@xxxxx.xxxxx.com running/xxxxxxx/dockerRun.sh'
+
+    }
+
+    stage('Cleanup'){
+
+      echo 'prune and cleanup'
+      sh 'npm prune'
+      sh 'rm node_modules -rf'
+
+      mail body: 'project build successful',
+                  from: 'xxxx@yyyyy.com',
+                  replyTo: 'xxxx@yyyy.com',
+                  subject: 'project build successful',
+                  to: 'yyyyy@yyyy.com'
+    }
+
+
+
+  }
+  catch (err) {
+
+      currentBuild.result = "FAILURE"
+
+          mail body: "project build error is here: ${env.BUILD_URL}" ,
+          from: 'xxxx@yyyy.com',
+          replyTo: 'yyyy@yyyy.com',
+          subject: 'project build failed',
+          to: 'zzzz@yyyyy.com'
+
+      throw err
+  }
 
 }
