--- a/jenkinsfile-examples/nodejs-build-test-deploy-docker-notify/Jenkinsfile
+++ b/jenkinsfile-examples/nodejs-build-test-deploy-docker-notify/Jenkinsfile
@@ -24,7 +24,7 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.
 */
 
-node('node') {
+agent {
   docker {
     image 'node:7-alpine'
   }
